# wb-ldt-app

./: # LDT Decision Engine v2 — Codex Build Guide  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.test-artifacts/: admin-source.txt  sample-ingestion-pipeline.csv  sample-ingestion-pipeline.docx
apps/api/: main.py
apps/worker/: main.py
docs/: README_QUICKSTART.md  README_TECHNICAL_AUDIT.md  SESSION_HANDOFF.md  contracts.md  deployment-backend-runbook-2026-04-20.md  deployment-gcp.md  evaluation-plan.md  migration-bridge.md  prompt-registry.md  seed_environment_dataset.csv  seed_environment_policy.txt
infra/monitoring/: wb-ldt-backend-5xx-alert-policy.json
notebooks/: local_serbia_smoke_test.ipynb  rag_retrieval_simulation.ipynb
notebooks/.ipynb_checkpoints/: rag_retrieval_simulation-checkpoint.ipynb
scripts/: deploy_cloud_run.sh  export_serbia_context_bundle.py  ingest_serbia_context_bundle.py  ingest_serbia_sources.py  load_serbia_datasets.py  local_serbia_rag_smoke.py  mirror_serbia_documents.py
src/: __init__.py
src/analytics/: __init__.py  gap_analysis.py  priority_signals.py
src/api/: auth.py  serializers.py
src/config/: settings.py
src/core/: __init__.py  app.py  container.py  errors.py  logging.py  request_context.py
src/embeddings/: __init__.py  client.py
src/ingestion/: __init__.py  chunking.py  pipeline.py  serbia_context.py  serbia_operational.py  source_registry.py
src/jobs/: __init__.py  ingest_serbia_sources.py  load_serbia_datasets.py  mirror_serbia_documents.py
src/llm/: __init__.py  (+3 more)
(+118 files in other folders)
