[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldt-de-v2"
version = "0.1.0"
description = "Backend-first LDT Decision Engine v2 service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "google-cloud-storage>=2.18,<3.0",
  "mammoth>=1.8,<2.0",
  "openpyxl>=3.1,<4.0",
  "openai>=1.75,<2.0",
  "pgvector>=0.3,<1.0",
  "pymupdf>=1.24,<2.0",
  "pymupdf4llm>=0.0.16,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
  "ignore::pytest.PytestCacheWarning",
]
